# ksni-gio

./: Justfile  README.md  meson.build
examples/: main.c
icons/: clouds.argb  sun.argb
src/: api.h  dbusmenu.c  dbusmenu.h  dbusmenu_item-private.h  dbusmenu_item.c  dbusmenu_item_private.h  host.c  ksni-gio.h  ksni.c  ksni.h  ksni_host.c  ksni_host.h  pixmap-private.h  pixmap.c  pixmap.h  pixmap_private.h  tray.c  tray.h
xml/: com.canonical.dbusmenu.xml  org.kde.StatusNotifierItem.xml
